# pre-commit-naming-convention

./: .gitignore  .naming-convention-exceptions  .pre-commit-hooks.yaml  README.md  pyproject.toml
doc/specs/: IMPLEMENTATION_PLAN.md  pre-commit-naming-convention-linter.md
src/naming_convention_linter/: __init__.py  cli.py  config.py  exceptions.py  git_utils.py  validator.py
tests/: __init__.py  test_cli.py  test_config.py  test_git_utils.py  test_validator.py
